# aurora-engine

./: Cargo.toml
engine-modexp/: Cargo.toml
engine-tests/: Cargo.toml
engine-tests/src/: lib.rs  prelude.rs
engine-tests/src/benches/: eth_deploy_code.rs  eth_erc20.rs  eth_standard_precompiles.rs  eth_transfer.rs  nft_pagination.rs  uniswap.rs
engine-tests/src/test_utils/: erc20.rs  exit_precompile.rs  mocked_external.rs  mod.rs  random.rs  self_destruct.rs  solidity.rs  standard_precompiles.rs  uniswap.rs  weth.rs
engine-tests/src/test_utils/one_inch/: liquidity_protocol.rs  mod.rs
engine-tests/src/test_utils/standalone/: mod.rs
engine-tests/src/tests/: erc20.rs  erc20_connector.rs  mod.rs  pausable_precompiles.rs  repro.rs  sanity.rs  uniswap.rs  xcc.rs
engine-workspace-tests/: Cargo.toml
engine-workspace-tests/src/: lib.rs
engine-workspace-tests/src/test_utils/: erc20.rs  mod.rs  random.rs  self_destruct.rs  solidity.rs  weth.rs
engine-workspace-tests/src/tests/: admin_change.rs  erc20.rs  mod.rs  random.rs  self_destruct_state.rs
engine-workspace-tests/src/tests/test_utils/: mod.rs  random.rs  solidity.rs
etc/engine-workspace-tests/: Cargo.toml
etc/engine-workspace-tests/src/: common.rs  lib.rs
etc/engine-workspace-tests/src/tests/: admin_change.rs  mod.rs  random.rs
